When 'Expand' is clicked, it is replaced by 'collapse'.

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -29,7 +29,7 @@
     right: 10px;
   }
 
-  .expandButton {
+  .expandButton, .collapseButton {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -38,6 +38,18 @@
     cursor: pointer;
     transform: translate(-50%);
     background-color: white;
+  }
+
+  .expandButtonOff {
+    display: none;
+  }
+
+  .collapseButton {
+    display: none;
+  }
+
+  .collapseButtonOn {
+    display: block;
   }
 }
 
