--- a/CSS/index.css
+++ b/CSS/index.css
@@ -92,7 +92,8 @@
   top: 10px;
   right: 10px;
 }
-.article .expandButton {
+.article .expandButton,
+.article .collapseButton {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -101,6 +102,15 @@
   cursor: pointer;
   transform: translate(-50%);
   background-color: white;
+}
+.article .expandButtonOff {
+  display: none;
+}
+.article .collapseButton {
+  display: none;
+}
+.article .collapseButtonOn {
+  display: block;
 }
 .article-open {
   height: 400px;
